--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.6",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
